
NEWS for Cardinal package
-------------------------

Version 0.99.3 [2015-2-3]
o Bioconductor Release Candidate 4
o Fixes bug in subset arg in select method
o In plot and image methods, 'groups' arg now coerced to factor

Version 0.99.2 [2015-1-20]
o Bioconductor Release Candidate 3
o Adjusts NIPALS unit tests for Windows build

Version 0.99.1 [2015-1-12]
o Bioconductor Release Candidate 2
o Fixed bug in SImageData coord factor levels not being
	properly updated when SImageSet is subsetted
o Cleaned up biocViews

Version 0.99.0 [2014-12-22]
o Bioconductor Release Candidate 1

Version 0.9.0 [2014-12-22]
o Added standardizeSamples method for between-sample normalization

Version 0.8.9 [2014-12-5]
o Improved plot methods for object summaries
o Fixed minor issurs in walkthrough vignette

Version 0.8.8 [2014-11-27]
o Changed modelData for ResultSet from facors to original parameters
o Added plot method for summaries of ResultSet objects
o Added 'normalize.image' argument for image method
o Improved plot and image methods for CrossValidated

Versoin 0.8.7 [2014-11-23]
o Fixed bug in plotting vectors from ResultSet
o Completed Cardinal-walkthrough vignette
o Fixed bug in PCA summary in reporting explained variance

Version 0.8.6 [2014-11-21]
o Completed walkthrough vignettes
o Added ImagingMassSpectrometry biocView

Version 0.8.5 [2014-11-20]
o Added 'show' and 'print' methods for most objects
o Changed 'combine' method for IAnnotatedDataFame, SImageData, and SImageSet
o Fixed bug in between-cluster SS calculation for spatialKMeans
o Fixed bug with pre-processing 1-pixel datasets
o Completed .Rd documentation for all public methods
o Cleaned up R CMD check warnings (except C++ .hpp headers)

Version 0.8.4 [2014-10-16]

o Changed 'topIons' to 'topLabels' method for summarization
o Added MSImageData class for peakData and mzData methods
o Changed naming scheme for SImageData (.iData => iData)
o Fixed bug in plotting of classes for SpatialShrunkenCentroids